<resources>
    <string name="app_name">MobileMentor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_title">Mobile Mentor</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="default_profile_name">Default Profile Name</string>
    <string name="default_mentor_text">Mentor?</string>
    <string name="default_major">Major?</string>
    <string name="bio_header_text">Bio</string>
    <string name="save_button_text">Save</string>
    <string name="post_title_text">Post Title</string>
    <string name="default_num_zero">0</string>
    <string name="default_tag_text">Tag</string>
    <string name="default_question">Default Question?</string>
    <string name="default_author_name">Author Name</string>
    <string name="default_response">Default Response</string>
    <string name="default_group_title">Default Group Title</string>
    <string name="default_group_member_name">Group Member Name</string>
    <string name="default_name">Name</string>
    <string name="default_bio_text_from_profile">Default bio text from profile</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_public_forum">Public Forum</string>
    <string name="menu_rate_my_professor">Rate My Professor</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="default_professor_name">Professor Name</string>
    <string name="default_professor_department">Department</string>
    <string name="reviews_text">Reviews</string>
    <string name="write_review_text">Write Review</string>
    <string name="quality_text">Quality</string>
    <string name="difficulty_text">Difficulty</string>
    <string name="empty_review_rating">0.0</string>
    <string name="default_professor_review">Default professor review text for Rate My Professor</string>
    <string name="default_class">Default Class XX123</string>
    <string name="about_text">Mobile Mentor was created by Sophie Brusniak and Rias Hilliard to facilitate communication between mentors and mentees in Rose-Hulman mentoring programs.\n\nThis app was made for the Winter 2019/2020 Android Project.</string>
    <string name="version_number">Version 1.9.97</string>
    <string name="send_text">Send</string>
    <string name="example_chat_text">Example text here lots of words to show what a long text looks like</string>
    <string name="default_forum_post">Forum Post</string>
    <string name="default_post_title">Post Title</string>
    <string name="default_post_tags">Post Tags</string>
    <string name="default_post_content">Post Content</string>
    <string name="default_response_content">Response Content</string>
    <string name="dialog_post_title">Title</string>
    <string name="dialog_post_tags">Tags (Comma Separated)</string>
    <string name="dialog_post_content">Content</string>
    <string name="dialog_post_type">Post Type (Defaults as Question)</string>
    <string name="login">Login</string>
    <string name="admin">ADMIN</string>
    <string name="mentor">MENTOR</string>
    <string name="prof">PROFESSOR</string>
    <string name="reg">REGULAR</string>
    <string name="new_post_dialog_title">New Post</string>
    <string name="new_response_dialog_title">New Response</string>
    <string name="dialog_new_group_title">Group Title</string>
    <string name="dialog_new_group_code">Group Code</string>
    <string name="join_group">Join Group</string>
    <string name="create_new_group">Create New Group</string>
    <string name="new_group_title">New Group</string>
    <string name="invalid_group">Invalid group</string>
    <string name="update_picture_button">Update Picture</string>
    <string name="dialog_edit_profile_details">Edit Profile Details</string>
    <string name="new_post_notice_checkbox">Post as Notice</string>
    <string name="join_group_title">Join Existing Group</string>
    <string name="rate_professor_class">Class</string>
    <string name="rate_professor_difficulty">Difficulty</string>
    <string name="new_review_title">New Review</string>
    <string name="rate_professor_quality">Quality</string>
    <string name="rate_professor_content">Content</string>
    <string name="two_sig_fig">"%.1f"</string>
    <string name="pref_build_version_title">Build Version</string>
    <string name="pref_about_title">About</string>
    <string name="pref_dnd_title">Do Not Disturb</string>
    <string name="pref_dnd_summary">Toggle Do NOT Disturb</string>
    <string name="pref_notifications_cat_title">Notifications</string>
    <string name="pref_customize_cat_title">Customize</string>
    <string name="photo_source">Choose a photo source</string>
    <string name="photo_source_msg">"Would you like to take a new picture?\nOr choose an existing one?"s</string>
    <string name="take_pic">Take Picture</string>
    <string name="choose_pic">Choose Picture</string>
    <string name="banner_color">Banner Color</string>
    <string name="menu_color">Menu Color</string>
    <string name="pref_banner_color_summary">Change bar color</string>
    <string name="pref_menu_color_summary">Change menu color</string>
    <string name="colorDialogTitle">Choose %s color</string>
    <string name="banner">Banner</string>
    <string name="menu">Menu</string>
    <string name="new_name_title">Change Display Name</string>
</resources>
