<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.rosehulman.brusniss.mobilementor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="edu.rosehulman.brusniss.mobilementor.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.rosehulman.brusniss.mobilementor.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="edu.rosehulman.brusniss.mobilementor.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="edu.rosehulman.brusniss.mobilementor.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="edu.rosehulman.brusniss.mobilementor.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.rosehulman.brusniss.mobilementor.ui.send.SendFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_pub_forum"
        android:name="edu.rosehulman.brusniss.mobilementor.ui.send.SendFragment"
        android:label="@string/menu_public_forum"
        tools:layout="@layout/fragment_gradient_background" />

    <fragment
        android:id="@+id/nav_rate_my_prof"
        android:name="edu.rosehulman.brusniss.mobilementor.ui.send.SendFragment"
        android:label="@string/menu_rate_my_professor"
        tools:layout="@layout/fragment_gradient_background" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="edu.rosehulman.brusniss.mobilementor.ui.send.SendFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_gradient_background" />
    <item

        android:icon="@drawable/ic_groups"
        android:title="@string/menu_groups"/>
    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_chats"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_logout"/>
</navigation>