<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/nav_pub_forum"
            android:icon="@drawable/ic_forum"
            android:title="@string/menu_public_forum"/>
        <item
            android:id="@+id/nav_rate_my_prof"
            android:icon="@drawable/ic_rate_my_prof"
            android:title="@string/menu_rate_my_professor"/>
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_groups"
            android:title="@string/menu_groups"/>
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_chats"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
