<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <PreferenceCategory-->
<!--        android:title="@string/pref_notifications_cat_title"-->
<!--        android:key="notifications">-->

<!--        <ListPreference-->
<!--            android:dialogTitle="Select Forum Notification Option"-->
<!--            android:entries="@array/settings_forumnotifications_titles"-->
<!--            android:entryValues="@array/settings_forumnotifications_values"-->
<!--            android:key="list"-->
<!--            android:summary="[Selected Setting Displayed Here]"-->
<!--            android:title="Forum Notifications" />-->

<!--        <ListPreference-->
<!--            android:dialogTitle="Select Chat Notification Option"-->
<!--            android:entries="@array/settings_chatnotifications_titles"-->
<!--            android:entryValues="@array/settings_chatnotifications_values"-->
<!--            android:key="list"-->
<!--            android:summary="[Selected Setting Displayed Here]"-->
<!--            android:title="Chat Notifications" />-->

<!--        <SwitchPreferenceCompat-->
<!--            android:key="dnd_switch"-->
<!--            android:title="@string/pref_dnd_title"-->
<!--            android:summary="@string/pref_dnd_summary"-->
<!--            android:defaultValue="false"/>-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory
        android:title="@string/pref_customize_cat_title"
        android:key="customize">

        <Preference
            android:title="@string/banner_color"
            android:key="banner_color"
            android:summary="@string/pref_banner_color_summary"
            />

        <Preference
            android:title="@string/menu_color"
            android:key="menu_color"
            android:summary="@string/pref_menu_color_summary"
            />

<!--        <ListPreference-->
<!--            android:dialogTitle="Select Text Font Option"-->
<!--            android:entries="@array/settings_textfont_titles"-->
<!--            android:entryValues="@array/settings_textfont_values"-->
<!--            android:key="list"-->
<!--            android:summary="[Selected Setting Displayed Here]"-->
<!--            android:title="Text Font" />-->

<!--        <ListPreference-->
<!--            android:dialogTitle="Select Text Size Option"-->
<!--            android:entries="@array/settings_textsize_titles"-->
<!--            android:entryValues="@array/settings_textsize_values"-->
<!--            android:key="list"-->
<!--            android:summary="[Selected Setting Displayed Here]"-->
<!--            android:title="Text Size" />-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/app_title">

        <Preference
            android:title="@string/pref_about_title"
            android:key="about"/>

        <Preference
            android:title="@string/pref_build_version_title"
            android:key="version"
            android:summary="@string/version_number"/>
    </PreferenceCategory>

</PreferenceScreen>