<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <ImageView
        android:id="@+id/default_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mobilementoricon"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/profile_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_profile_name"
        android:textSize="30sp"
        android:layout_below="@id/default_profile_image"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profile_major_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_major"
        android:textSize="26sp"
        android:layout_below="@id/profile_name_text"/>

    <TextView
        android:id="@+id/profile_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_mentor_text"
        android:textSize="26sp"
        android:layout_below="@id/profile_major_text"/>

    <TextView
        android:id="@+id/profile_bio_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio_header_text"
        android:textSize="26sp"
        android:layout_below="@id/profile_level"/>

    <TextView
        android:id="@+id/profile_bio_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio_header_text"
        android:textSize="18sp"
        android:layout_below="@id/profile_bio_title_text"/>

</RelativeLayout>