<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_view_rate_professor_individual_review_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/greyCardBackground">

        <LinearLayout
            android:id="@+id/quality_difficulty_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality_text" />

            <TextView
                android:id="@+id/professor_rating_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_review_rating"
                android:background="@android:color/holo_green_light"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/professor_rating_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_review_rating"
                android:background="@android:color/holo_red_light"
                android:padding="5dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty_text" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/quality_difficulty_summary">

            <TextView
                android:id="@+id/professor_rating_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_class"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/professor_individual_review_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_professor_review"
                android:textSize="16sp"
                android:layout_below="@id/professor_rating_class"/>

        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>