<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/professor_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/mobilementoricon" />

        <TextView
            android:id="@+id/selected_member_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_group_member_name"
            android:textSize="18sp"
            android:layout_marginStart="110dp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/selected_member_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_major"
            android:textSize="18sp"
            android:layout_marginStart="110dp"
            android:layout_below="@+id/selected_member_name"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/selected_member_bio"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="10dp"
        android:text="@string/default_bio_text_from_profile"
        android:textSize="18sp"
        android:background="@color/bioLightGrey"
        android:scrollbars="vertical"
        />

</LinearLayout>