<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_view_forum_post_response_row"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/post_response_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_response"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/forum_like_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_like" />

                    <TextView
                        android:id="@+id/post_like_text"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:textSize="18sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_num_zero" />

                </LinearLayout>

                <!--Note that the below width and height is hard coded (30dp)...-->
                <ImageView
                    android:id="@+id/author_picture"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/post_author_name"
                    app:srcCompat="@drawable/mobilementoricon" />

                <TextView
                    android:id="@+id/post_author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_author_name"
                    android:textSize="18sp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>